Added DS tag to @PG as it seems to be in common use.

--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -158,6 +158,7 @@ The following table give the defined record types and tags. Tags with
         to refer to the newest {\tt PG} record in a chain.  It may refer to any {\tt PG}
         record in a chain, implying that the SAM record has been operated on by the
         program in that {\tt PG} record, and the program(s) referred to via the {\tt PP} tag. \\\cline{2-3}
+  & {\tt DS} & Description.\\\cline{2-3}
   & {\tt VN} & Program version \\\cline{1-3}
   \multicolumn{2}{|l}{\tt @CO} & One-line text comment. Unordered multiple {\tt @CO} lines are allowed.\\
   \cline{1-3}
